5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1575_1560.log
== TEST (2019-03-14 12:33:09) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string..lower())
-- ERROR:
File "XXXX", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:33:34) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:33:41) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.215554
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
